# Salmonella-CRISPR-Blast

./: 1_get_crispr_alleles.py  LT2_blast_DR_sorted.tsv  README.md  get_crispr_alleles.py  main.py  parsers.py  pyproject.toml  sort_crispr_alleles.py
0_db/: DR_Salmonella.fa  Spacer_Salmonella.fa  Spacer_Salmonella.ndb  Spacer_Salmonella.not  Spacer_Salmonella.nsq
db/: DR_Salmonella.ndb  DR_Salmonella.nin  DR_Salmonella.nsq  Spacer_Salmonella.nhr  Spacer_Salmonella.nin  Spacer_Salmonella.nto
src/swgct/: assign_names.py  get_crispr_alleles.py  main.py  misc.py  parsers.py  swgct.py  swgct_run.py  swgct_summary.py
src/swgct/db/: DR_Salmonella.nhr  DR_Salmonella.not  DR_Salmonella.nto  spacers_Salmonella.fa  spacers_Salmonella.ndb  spacers_Salmonella.nhr  spacers_Salmonella.nin  spacers_Salmonella.not  spacers_Salmonella.nsq  spacers_Salmonella.nto
test/: LT2.DR_blast.gff  LT2.blast_DR.tsv
